--- a/index.html
+++ b/index.html
@@ -15,17 +15,24 @@
 
 		<a href="./contact.html"><i class="fa fa-car"></i>Contact</a>
 
+		<a href="./info.html"><i class="fa fa-car"></i>Info</a>
 	</nav>
-
-	<h1 class="brown-text italic-text"> Hello thank you for coming to my site</h1>
+	<center>
+		<h1 class="brown-text italic-text"> Hello thank you for coming to my site It Is My Newest One Yet</h1>
+	</center>
 	<p class="brown-text italic-text">I am a coder</p>
 	<header>
 		<footer>
 
 			<div class="brown-text italic-text"> Some content here</div>
-
-			<h1 class="brown-text italic-text">Hi, I am Josef</h1>
-			<p class="brown-text italic-text"> I am going to be a website developer and you are on my practice site</p>
+			<center>
+				<h1 class="brown-text italic-text">Hi, I am Josef. Let's Work Together And You Can Make An Awesome
+					Website!</h1>
+			</center>
+			<center>
+				<p class="brown-text italic-text"> I am going to be a website developer and you are on my practice site
+				</p>
+			</center>
 			<img src="Images/guy.jpg" alt="profile photo" width="270" height="270">
 
 
@@ -39,9 +46,15 @@
 
 
 
-
-		<h1 class="brown-text italic-text"> Hopefully you'll like my newest sites</h1>
-		<p class="brown-text italic-text">I will develop lots of websites. You have joined my newest one</p>
+		<center>
+			<h1 class="brown-text italic-text"> Hopefully you'll like my newest sites I Had An Awesome Kind Teacher To
+				Teach Me All This!</h1>
+		</center>
+		<center>
+			<h1 class="brown-text italic-text">I will develop lots of websites. You have joined my newest one. Go To
+				Carleton University And You Can Make One Too!:D</Too!:D>
+			</h1>
+		</center>
 </body>
 
 
@@ -66,15 +79,20 @@
 </form>
 
 <section class="stories-section">
-	<h1> My stories </h1>
-</section>
-<section>
-	<h1 class="Joke-title">Joke Generator</h1>
-	<h2>learn to laugh here</h2>
-	<div id="joking">
-		You don't look good
-	</div>
-	<button class="joke-button" onclick="randomInteger()">Generate Joke</button>
+	<center>
+		<h1> My stories </h1>
+	</center>
+	<center>
+		<h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus praesentium repellendus, blanditiis
+			aspernatur
+			dicta alias voluptatum aliquid ratione quae sit mollitia repellat quasi! Soluta eos consequuntur, similique
+			excepturi itaque est.</h1>
+	</center>
+	<center>
+		<h1>I Have Had Little Experience In Coding But Then I Got A Course Called "Develop Your Own Website" Along With
+			A
+			Good Teacher. Now I Know A lot About Coding!</h1>
+	</center>
 </section>
 
 <footer>
@@ -112,29 +130,6 @@
 	function changeName(customText) {
 		document.getElementById("intro").innerHTML = customText
 	}
-
-	var jokesArray = [
-		"A woman gets on a bus with her baby. The bus driver says: “Ugh, that’s the ugliest baby I’ve ever seen!” The woman walks to the rear of the bus and sits down, fuming. She says to a man next to her: “The driver just insulted me!” The man says: “You go up there and tell him off. Go on, I’ll hold your monkey for you",
-		"Police arrested two kids yesterday, one was drinking battery acid, the other was eating fireworks. They charged one – and let the other one off.",
-		"I’m on a whiskey diet. I’ve lost three days already.",
-		"My therapist says I have a preoccupation with vengeance. We’ll see about that.",
-		"I was in Tesco’s and I saw this man and woman wrapped in a barcode. I said, “Are you two an item?”"
-	]
-
-	var randomNumber = Math.random() * 4;
-
-	var randomInteger = Math.floor(randomNumber);
-
-	var randomJoke = jokesArray[randomInteger]
-
-	document.getElementById("joking").innerHTML = randomJoke
-
-
-
-
-
-
-
 
 </script>
 
