--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Page</title>
+    <title>info Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -22,12 +22,10 @@
 
     </nav>
 
-    <h1>Contact Page</h1>
+    <h1>Info Page</h1>
+
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, molestiae vitae ut corporis suscipit at. Sed quod
+        aperiam dolorem ab sapiente iusto voluptatibus quos ipsam doloremque ducimus, molestias dolorum voluptatem.</h2>
 </body>
 
 </html>
-
-<h1>You Can Contact Me By Gmail But Not By Phone Please</h1>
-<center>
-    <h3>If This Site Is Popular I Will Receive Lots Of Contacts</h3>
-</center>
